tests/sksl/errors/ReservedNameExternal.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'external'
1 error
